--- a/src/app/pet-information/pet-information.component.html
+++ b/src/app/pet-information/pet-information.component.html
@@ -18,7 +18,7 @@
                         <div class="right-container">
 
                             <mat-form-field>
-                                <input disabled matInput placeholder="Id card" value="{{customer?.idCard}}">
+                                <input disabled matInput placeholder="Id card" value="{{customer?.idNumber}}">
                             </mat-form-field>
                             <mat-form-field>
                                 <input disabled matInput placeholder="Phone number" value="{{customer?.phoneNumber}}">
