--- a/src/app/treatment-list/treatment-list.component.html
+++ b/src/app/treatment-list/treatment-list.component.html
@@ -1,1 +1,64 @@
-<p>treatment-list works!</p>
+<div fxLayout="row" fxLayoutWrap="wrap">
+	<!-- Card column -->
+	<div fxFlex.gt-sm="100%" fxFlex="100">
+		<mat-card>
+
+			<mat-tab-group mat-align-tabs="center">
+				<mat-tab label="All Treatments">
+
+					<div class="demo-tab-content">
+						<div class="custome-table">
+							<table mat-table [dataSource]="treatments" class="mat-elevation-z8">
+								<ng-container matColumnDef="position">
+									<th mat-header-cell *matHeaderCellDef><strong>No.</strong> </th>
+									<td mat-cell *matCellDef="let element"> {{element.id}} </td>
+								</ng-container>
+
+
+								<ng-container matColumnDef="type">
+									<th mat-header-cell *matHeaderCellDef><strong> type</strong> </th>
+									<td mat-cell *matCellDef="let element"> {{element.type}} </td>
+								</ng-container>
+
+
+								<ng-container matColumnDef="date">
+									<th mat-header-cell *matHeaderCellDef><strong>date</strong> </th>
+									<td mat-cell *matCellDef="let element"> {{element.date}} </td>
+								</ng-container>
+
+								<ng-container matColumnDef="status">
+									<th mat-header-cell *matHeaderCellDef><strong>status</strong> </th>
+									<td mat-cell *matCellDef="let element"> {{element.status}} </td>
+								</ng-container>
+
+								<ng-container matColumnDef="price">
+									<th mat-header-cell *matHeaderCellDef><strong>price</strong> </th>
+									<td mat-cell *matCellDef="let element"> {{element.price}} </td>
+								</ng-container>
+
+								<ng-container matColumnDef="actions">
+									<th mat-header-cell *matHeaderCellDef><strong>Actions</strong> </th>
+									<td mat-cell *matCellDef="let element"> 
+										<button mat-icon-button color="primary" >
+											<mat-icon>remove_red_eye</mat-icon>
+
+										</button>
+									</td>
+								</ng-container>
+								<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+								<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+							</table>
+						</div>
+					</div>
+
+
+
+
+				</mat-tab>
+
+			</mat-tab-group>
+
+
+		</mat-card>
+	</div>
+</div>
